--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: Implementation :: CPython
 
 [options]
 py_modules = flake8_match
